# Spetik

./: CMakeLists.txt  LICENSE  README.md
src/: board.cpp  board.h  book.cpp  book.h  endgame.cpp  endgame.h  move.cpp  move.h  moveorder.cpp  moveorder.h  print_nnue.cpp  pruning.cpp  pruning.h  quiescence.cpp  quiescence.h  search.cpp  search.h  thread.cpp  thread.h  tt.cpp  tt.h
src/ai/: contempt.cpp  contempt.h  learn.cpp  learn.h  lmr.cpp  lmr.h  multipv.cpp  multipv.h  singular.cpp  singular.h  tuner.cpp  tuner.h
src/eval/: evaluation.cpp  evaluation.h  king.cpp  king.h  material.cpp  material.h  pawn.cpp  pawn.h
src/eval/nnue/: architecture.cpp  architecture.h  feature_set.cpp  feature_set.h  nnue.cpp  nnue.h  serialize.cpp  serialize.h  trainer.cpp  trainer.h
src/util/: bitbase.cpp  bitbase.h  prefetch.cpp  prefetch.h  simd.cpp  simd.h  time.cpp  time.h
tests/: perft.cpp  test_board.cpp  test_eval.cpp  test_search.cpp
